[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onboot"
version = "1.0.0"
requires-python = ">= 3.8"
authors = [{name = "nbdy"}]
maintainers = [{name = "nbdy"}]
readme = "README.md"
license = {text = "MIT License"}
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/nbdy/onboot"
Repository = "https://github.com/nbdy/onboot.git"
Issues = "https://github.com/nbdy/onboot/issues"
